--- a/css/universe.css
+++ b/css/universe.css
@@ -1,21 +1,67 @@
+/* line 21, ../scss/universe.scss */
 body {
-  margin: 0; }
-
-footer {
-  background-color: #3b3b3b;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  opacity: 0.7; }
-
-h1 {
+  margin: 0;
+  color: #FFF;
   font-family: arial, sans-serif;
-  font-size: 32px;
-  padding: 0;
-  margin: 8px;
-  color: #FFFFFF; }
+  font-size: 12px;
+}
 
+/* line 28, ../scss/universe.scss */
+footer {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+}
+/* line 33, ../scss/universe.scss */
+footer .inner {
+  display: inline-block;
+  margin-bottom: -5px;
+  background-color: #4d4d4d;
+  padding: 10px 20px;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=95);
+  opacity: 0.95;
+  -webkit-box-shadow: 0px 0px 8px #000;
+  -moz-box-shadow: 0px 0px 8px #000;
+  box-shadow: 0px 0px 8px #000;
+}
+/* line 43, ../scss/universe.scss */
+footer .inner .controls {
+  max-height: 0px;
+  overflow: hidden;
+  -moz-transition-property: all;
+  -o-transition-property: all;
+  -webkit-transition-property: all;
+  transition-property: all;
+  -moz-transition-duration: 2s;
+  -o-transition-duration: 2s;
+  -webkit-transition-duration: 2s;
+  transition-duration: 2s;
+  -moz-transition-delay: 1s;
+  -o-transition-delay: 1s;
+  -webkit-transition-delay: 1s;
+  transition-delay: 1s;
+  margin-top: 6px;
+}
+/* line 53, ../scss/universe.scss */
+footer .inner:hover .controls {
+  max-height: 99px;
+  -moz-transition-delay: 0s;
+  -o-transition-delay: 0s;
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
+}
+
+/* line 61, ../scss/universe.scss */
+h1 {
+  font-size: 24px;
+  padding: 0;
+  margin: 0;
+  color: #FFFFFF;
+}
+
+/* line 68, ../scss/universe.scss */
 #universe {
   width: 100%;
   height: 100%;
-  background-color: #eeeeee; }
+  background-color: #FFF;
+}
