--- a/scss/universe.scss
+++ b/scss/universe.scss
@@ -1,24 +1,67 @@
-$bg: #EEE;
-$title-size: 32px;
+@import "compass";
+//@import "compass/css3/transition";
+
+@mixin box-shadow($top, $left, $blur, $color, $inset: false) {
+  @if $inset {
+    -webkit-box-shadow:inset $top $left $blur $color;
+    -moz-box-shadow:inset $top $left $blur $color;
+    box-shadow:inset $top $left $blur $color;
+  } @else {
+    -webkit-box-shadow: $top $left $blur $color;
+    -moz-box-shadow: $top $left $blur $color;
+    box-shadow: $top $left $blur $color;
+  }
+}
+
+// Variables
+$bg: #FFF;
+$title-size: 24px;
+$text-size: 12px;
 
 body {
   margin: 0;
+  color: $bg;
+  font-family: arial, sans-serif;
+  font-size: $text-size;
 }
 
 footer{
-  background-color: darken($bg, 70);
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
   width: 100%;
-  opacity: 0.7;
+
+  .inner{
+    display: inline-block;
+    margin-bottom: -5px;
+
+    background-color: darken($bg, 70);
+    padding: 10px 20px;
+
+    @include opacity(0.95);
+    @include box-shadow(0px, 0px, 8px, #000);
+
+    .controls{
+      max-height: 0px;
+      overflow: hidden;
+      @include transition-property(all);
+      @include transition-duration(2s);
+      @include transition-delay(1s);
+      margin-top: 6px;
+    }
+
+    &:hover{
+      .controls{
+        max-height: 99px;
+        @include transition-delay(0s);
+      }
+    }
+  }
 }
 
 h1{
-  font-family: arial, sans-serif;
   font-size: $title-size;
-
   padding: 0;
-  margin: $title-size/4;
+  margin: 0;
   color: #FFFFFF;
 }
 
