--- a/css/universe.css
+++ b/css/universe.css
@@ -1,4 +1,4 @@
-/* line 21, ../scss/universe.scss */
+/* line 22, ../scss/universe.scss */
 body {
   margin: 0;
   color: #FFF;
@@ -6,25 +6,29 @@ body {
   font-size: 12px;
 }
 
-/* line 28, ../scss/universe.scss */
+/* line 29, ../scss/universe.scss */
 footer {
   position: absolute;
   bottom: 0px;
   width: 100%;
 }
-/* line 33, ../scss/universe.scss */
+/* line 34, ../scss/universe.scss */
 footer .inner {
   display: inline-block;
   margin-bottom: -5px;
   background-color: #4d4d4d;
-  padding: 10px 20px;
+  padding: 10px 30px 10px 20px;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=95);
   opacity: 0.95;
   -webkit-box-shadow: 0px 0px 8px #000;
   -moz-box-shadow: 0px 0px 8px #000;
   box-shadow: 0px 0px 8px #000;
 }
-/* line 43, ../scss/universe.scss */
+/* line 44, ../scss/universe.scss */
+footer .inner .cogwheel {
+  display: inline-block;
+}
+/* line 48, ../scss/universe.scss */
 footer .inner .controls {
   max-height: 0px;
   overflow: hidden;
@@ -40,9 +44,9 @@ footer .inner .controls {
   -o-transition-delay: 1s;
   -webkit-transition-delay: 1s;
   transition-delay: 1s;
-  margin-top: 6px;
+  margin-top: 4px;
 }
-/* line 53, ../scss/universe.scss */
+/* line 58, ../scss/universe.scss */
 footer .inner:hover .controls {
   max-height: 99px;
   -moz-transition-delay: 0s;
@@ -51,15 +55,16 @@ footer .inner:hover .controls {
   transition-delay: 0s;
 }
 
-/* line 61, ../scss/universe.scss */
+/* line 66, ../scss/universe.scss */
 h1 {
   font-size: 24px;
   padding: 0;
   margin: 0;
   color: #FFFFFF;
+  display: inline-block;
 }
 
-/* line 68, ../scss/universe.scss */
+/* line 74, ../scss/universe.scss */
 #universe {
   width: 100%;
   height: 100%;
