--- a/scss/universe.scss
+++ b/scss/universe.scss
@@ -15,6 +15,7 @@
 
 // Variables
 $bg: #FFF;
+$cog_color: #CCC;
 $title-size: 24px;
 $text-size: 12px;
 
@@ -35,10 +36,14 @@ footer{
     margin-bottom: -5px;
 
     background-color: darken($bg, 70);
-    padding: 10px 20px;
+    padding: 10px 30px 10px 20px;
 
     @include opacity(0.95);
     @include box-shadow(0px, 0px, 8px, #000);
+
+    .cogwheel{
+      display: inline-block;
+    }
 
     .controls{
       max-height: 0px;
@@ -46,7 +51,7 @@ footer{
       @include transition-property(all);
       @include transition-duration(2s);
       @include transition-delay(1s);
-      margin-top: 6px;
+      margin-top: 4px;
     }
 
     &:hover{
@@ -63,6 +68,7 @@ h1{
   padding: 0;
   margin: 0;
   color: #FFFFFF;
+  display: inline-block;
 }
 
 #universe{
