--- a/css/universe.css
+++ b/css/universe.css
@@ -1,4 +1,4 @@
-/* line 22, ../scss/universe.scss */
+/* line 23, ../scss/universe.scss */
 body {
   margin: 0;
   color: #FFF;
@@ -6,29 +6,32 @@ body {
   font-size: 12px;
 }
 
-/* line 29, ../scss/universe.scss */
+/* line 30, ../scss/universe.scss */
+canvas {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+}
+
+/* line 36, ../scss/universe.scss */
 footer {
   position: absolute;
   bottom: 0px;
   width: 100%;
 }
-/* line 34, ../scss/universe.scss */
+/* line 42, ../scss/universe.scss */
 footer .inner {
-  display: inline-block;
-  margin-bottom: -5px;
-  background-color: #4d4d4d;
-  padding: 10px 30px 10px 20px;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=95);
   opacity: 0.95;
-  -webkit-box-shadow: 0px 0px 8px #000;
-  -moz-box-shadow: 0px 0px 8px #000;
-  box-shadow: 0px 0px 8px #000;
+  display: inline-block;
+  padding: 0px 30px 0px 20px;
+  margin-bottom: 2px;
 }
-/* line 44, ../scss/universe.scss */
+/* line 50, ../scss/universe.scss */
 footer .inner .cogwheel {
   display: inline-block;
 }
-/* line 48, ../scss/universe.scss */
+/* line 54, ../scss/universe.scss */
 footer .inner .controls {
   max-height: 0px;
   overflow: hidden;
@@ -36,26 +39,30 @@ footer .inner .controls {
   -o-transition-property: all;
   -webkit-transition-property: all;
   transition-property: all;
-  -moz-transition-duration: 2s;
-  -o-transition-duration: 2s;
-  -webkit-transition-duration: 2s;
-  transition-duration: 2s;
+  -moz-transition-duration: 1s;
+  -o-transition-duration: 1s;
+  -webkit-transition-duration: 1s;
+  transition-duration: 1s;
   -moz-transition-delay: 1s;
   -o-transition-delay: 1s;
   -webkit-transition-delay: 1s;
   transition-delay: 1s;
-  margin-top: 4px;
+  margin-top: 0px;
 }
-/* line 58, ../scss/universe.scss */
+/* line 65, ../scss/universe.scss */
 footer .inner:hover .controls {
-  max-height: 99px;
+  -webkit-box-shadow: 0px 0px 8px #000;
+  -moz-box-shadow: 0px 0px 8px #000;
+  box-shadow: 0px 0px 8px #000;
+  background-color: #e6e6e6;
   -moz-transition-delay: 0s;
   -o-transition-delay: 0s;
   -webkit-transition-delay: 0s;
   transition-delay: 0s;
+  max-height: 99px;
 }
 
-/* line 66, ../scss/universe.scss */
+/* line 75, ../scss/universe.scss */
 h1 {
   font-size: 24px;
   padding: 0;
@@ -64,7 +71,7 @@ h1 {
   display: inline-block;
 }
 
-/* line 74, ../scss/universe.scss */
+/* line 83, ../scss/universe.scss */
 #universe {
   width: 100%;
   height: 100%;
