--- a/css/universe.css
+++ b/css/universe.css
@@ -1,4 +1,13 @@
-/* line 23, ../scss/universe.scss */
+/* line 60, ../scss/_buttons.scss */
+button::-moz-focus-inner,
+input[type="reset"]::-moz-focus-inner,
+input[type="button"]::-moz-focus-inner,
+input[type="submit"]::-moz-focus-inner,
+input[type="file"] > input[type="button"]::-moz-focus-inner {
+  border: none;
+}
+
+/* line 25, ../scss/universe.scss */
 body {
   margin: 0;
   color: #FFF;
@@ -6,25 +15,22 @@ body {
   font-size: 12px;
 }
 
-/* line 30, ../scss/universe.scss */
+/* line 32, ../scss/universe.scss */
 canvas {
   position: absolute;
   top: 0;
   bottom: 0;
 }
 
-/* line 36, ../scss/universe.scss */
+/* line 38, ../scss/universe.scss */
 footer {
   position: absolute;
   bottom: 0px;
   width: 100%;
 }
-/* line 42, ../scss/universe.scss */
+/* line 44, ../scss/universe.scss */
 footer .inner {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=95);
-  opacity: 0.95;
   display: inline-block;
-  padding: 0px 30px 0px 20px;
   margin-bottom: 2px;
 }
 /* line 50, ../scss/universe.scss */
@@ -34,6 +40,7 @@ footer .inner .cogwheel {
 /* line 54, ../scss/universe.scss */
 footer .inner .controls {
   max-height: 0px;
+  padding: 0 12px;
   overflow: hidden;
   -moz-transition-property: all;
   -o-transition-property: all;
@@ -48,30 +55,94 @@ footer .inner .controls {
   -webkit-transition-delay: 1s;
   transition-delay: 1s;
   margin-top: 0px;
+  background-color: #262626;
+  -webkit-box-shadow: 0px 4px 4px #000;
+  -moz-box-shadow: 0px 4px 4px #000;
+  box-shadow: 0px 4px 4px #000;
 }
 /* line 65, ../scss/universe.scss */
+footer .inner .controls div {
+  margin: 10px 0;
+}
+/* line 71, ../scss/universe.scss */
 footer .inner:hover .controls {
-  -webkit-box-shadow: 0px 0px 8px #000;
-  -moz-box-shadow: 0px 0px 8px #000;
-  box-shadow: 0px 0px 8px #000;
-  background-color: #e6e6e6;
   -moz-transition-delay: 0s;
   -o-transition-delay: 0s;
   -webkit-transition-delay: 0s;
   transition-delay: 0s;
-  max-height: 99px;
+  -webkit-box-shadow: 6px 4px 4px #000;
+  -moz-box-shadow: 6px 4px 4px #000;
+  box-shadow: 6px 4px 4px #000;
+  max-height: 180px;
 }
 
-/* line 75, ../scss/universe.scss */
+/* line 80, ../scss/universe.scss */
+.button {
+  display: inline-block;
+  padding: 0.5em 2em 0.55em;
+  outline: none;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  -webkit-border-radius: 0.5em;
+  -moz-border-radius: 0.5em;
+  border-radius: 0.5em;
+  border: solid 1px #cccccc;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+  border: solid 1px #3c3c3c;
+  background-color: #444;
+  background: -webkit-gradient(linear, left top, left bottom, from(#656565), to(#444));
+  background: -moz-linear-gradient(top, #656565, #444);
+  color: #ececec;
+  text-transform: capitalize;
+}
+/* line 32, ../scss/_buttons.scss */
+.button:hover {
+  text-decoration: none;
+}
+/* line 35, ../scss/_buttons.scss */
+.button:active {
+  position: relative;
+  top: 1px;
+}
+/* line 45, ../scss/_buttons.scss */
+.button:hover {
+  background-color: #373737;
+  background: -webkit-gradient(linear, left top, left bottom, from(#5e5e5e), to(#373737));
+  background: -moz-linear-gradient(top, #5e5e5e, #373737);
+}
+/* line 48, ../scss/_buttons.scss */
+.button:active {
+  background-color: #5e5e5e;
+  background: -webkit-gradient(linear, left top, left bottom, from(#444), to(#5e5e5e));
+  background: -moz-linear-gradient(top, #444, #5e5e5e);
+  color: #c6c6c6;
+}
+
+/* line 86, ../scss/universe.scss */
+label {
+  min-width: 60px;
+}
+
+/* line 90, ../scss/universe.scss */
+.settings-toggle {
+  margin: 4px 14px;
+}
+
+/* line 94, ../scss/universe.scss */
 h1 {
-  font-size: 24px;
+  font-size: 32px;
   padding: 0;
   margin: 0;
-  color: #FFFFFF;
+  color: #FFF;
   display: inline-block;
+  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.6);
 }
 
-/* line 83, ../scss/universe.scss */
+/* line 103, ../scss/universe.scss */
 #universe {
   width: 100%;
   height: 100%;
