--- a/scss/universe.scss
+++ b/scss/universe.scss
@@ -1,4 +1,5 @@
 @import "compass";
+@import "buttons";
 //@import "compass/css3/transition";
 
 @mixin box-shadow($top, $left, $blur, $color, $inset: false) {
@@ -16,13 +17,14 @@
 // Variables
 $bg: #FFF;
 $cog_color: #CCC;
-$title-size: 24px;
+$title-size: 32px;
 $text-size: 12px;
+$text-color: #FFF;
 $celColor: #ab23cc;
 
 body {
   margin: 0;
-  color: $bg;
+  color: $text-color;
   font-family: arial, sans-serif;
   font-size: $text-size;
 }
@@ -40,11 +42,9 @@ footer{
 
 
   .inner{
-    @include opacity(0.95);
-//    @include box-shadow(0px, 0px, 8px, #000);
+//    @include opacity(0.95);
 
     display: inline-block;
-    padding: 0px 30px 0px 20px;
     margin-bottom: 2px;
 
     .cogwheel{
@@ -53,31 +53,51 @@ footer{
 
     .controls{
       max-height: 0px;
+      padding: 0 12px;
       overflow: hidden;
       @include transition-property(all);
       @include transition-duration(1s);
       @include transition-delay(1s);
       margin-top: 0px;
+      background-color: darken($bg, 85);
+      @include box-shadow(0px, 4px, 4px, #000);
+
+      div{
+        margin: 10px 0;
+      }
     }
 
     &:hover{
-
       .controls{
-        @include box-shadow(0px, 0px, 8px, #000);
-        background-color: darken($bg, 10);
         @include transition-delay(0s);
-        max-height: 99px;
+        @include box-shadow(6px, 4px, 4px, #000);
+        max-height: 180px;
       }
     }
   }
+}
+
+.button{
+  @include button;
+  @include color(#444);
+  text-transform: capitalize ;
+}
+
+label{
+  min-width: 60px;
+}
+
+.settings-toggle{
+  margin: 4px 14px;
 }
 
 h1{
   font-size: $title-size;
   padding: 0;
   margin: 0;
-  color: #FFFFFF;
+  color: $text-color;
   display: inline-block;
+  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.6);
 }
 
 #universe{
