--- a/scss/universe.scss
+++ b/scss/universe.scss
@@ -1,18 +1,7 @@
 @import "compass";
 @import "buttons";
+@import "shadows";
 //@import "compass/css3/transition";
-
-@mixin box-shadow($top, $left, $blur, $color, $inset: false) {
-  @if $inset {
-    -webkit-box-shadow:inset $top $left $blur $color;
-    -moz-box-shadow:inset $top $left $blur $color;
-    box-shadow:inset $top $left $blur $color;
-  } @else {
-    -webkit-box-shadow: $top $left $blur $color;
-    -moz-box-shadow: $top $left $blur $color;
-    box-shadow: $top $left $blur $color;
-  }
-}
 
 // Variables
 $bg: #FFF;
@@ -29,10 +18,39 @@ body {
   font-size: $text-size;
 }
 
+h1{
+  font-size: $title-size;
+  padding: 0;
+  margin: 0;
+  color: $text-color;
+  display: inline-block;
+  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.6);
+}
+
+label{
+  font-weight: bold;
+}
+
 canvas {
   position: absolute;
   top: 0;
   bottom: 0;
+}
+
+.button{
+  @include button;
+  @include color(#444);
+  text-transform: capitalize ;
+}
+
+#universe{
+  width: 100%;
+  height: 100%;
+  background-color: $bg;
+}
+
+.settings-toggle{
+  margin: 4px 14px;
 }
 
 footer{
@@ -62,8 +80,9 @@ footer{
       background-color: darken($bg, 85);
       @include box-shadow(0px, 4px, 4px, #000);
 
-      div{
+      &>div{
         margin: 10px 0;
+        padding: 2px 0 10px;
       }
     }
 
@@ -77,31 +96,7 @@ footer{
   }
 }
 
-.button{
-  @include button;
-  @include color(#444);
-  text-transform: capitalize ;
-}
-
-label{
-  min-width: 60px;
-}
-
-.settings-toggle{
-  margin: 4px 14px;
-}
-
-h1{
-  font-size: $title-size;
-  padding: 0;
-  margin: 0;
-  color: $text-color;
-  display: inline-block;
-  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.6);
-}
-
-#universe{
-  width: 100%;
-  height: 100%;
-  background-color: $bg;
+#lifetime,
+#celsize{
+  width: 180px;
 }
