--- a/css/universe.css
+++ b/css/universe.css
@@ -7,7 +7,7 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
   border: none;
 }
 
-/* line 25, ../scss/universe.scss */
+/* line 14, ../scss/universe.scss */
 body {
   margin: 0;
   color: #FFF;
@@ -15,68 +15,29 @@ body {
   font-size: 12px;
 }
 
-/* line 32, ../scss/universe.scss */
+/* line 21, ../scss/universe.scss */
+h1 {
+  font-size: 32px;
+  padding: 0;
+  margin: 0;
+  color: #FFF;
+  display: inline-block;
+  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.6);
+}
+
+/* line 30, ../scss/universe.scss */
+label {
+  font-weight: bold;
+}
+
+/* line 34, ../scss/universe.scss */
 canvas {
   position: absolute;
   top: 0;
   bottom: 0;
 }
 
-/* line 38, ../scss/universe.scss */
-footer {
-  position: absolute;
-  bottom: 0px;
-  width: 100%;
-}
-/* line 44, ../scss/universe.scss */
-footer .inner {
-  display: inline-block;
-  margin-bottom: 2px;
-}
-/* line 50, ../scss/universe.scss */
-footer .inner .cogwheel {
-  display: inline-block;
-}
-/* line 54, ../scss/universe.scss */
-footer .inner .controls {
-  max-height: 0px;
-  padding: 0 12px;
-  overflow: hidden;
-  -moz-transition-property: all;
-  -o-transition-property: all;
-  -webkit-transition-property: all;
-  transition-property: all;
-  -moz-transition-duration: 1s;
-  -o-transition-duration: 1s;
-  -webkit-transition-duration: 1s;
-  transition-duration: 1s;
-  -moz-transition-delay: 1s;
-  -o-transition-delay: 1s;
-  -webkit-transition-delay: 1s;
-  transition-delay: 1s;
-  margin-top: 0px;
-  background-color: #262626;
-  -webkit-box-shadow: 0px 4px 4px #000;
-  -moz-box-shadow: 0px 4px 4px #000;
-  box-shadow: 0px 4px 4px #000;
-}
-/* line 65, ../scss/universe.scss */
-footer .inner .controls div {
-  margin: 10px 0;
-}
-/* line 71, ../scss/universe.scss */
-footer .inner:hover .controls {
-  -moz-transition-delay: 0s;
-  -o-transition-delay: 0s;
-  -webkit-transition-delay: 0s;
-  transition-delay: 0s;
-  -webkit-box-shadow: 6px 4px 4px #000;
-  -moz-box-shadow: 6px 4px 4px #000;
-  box-shadow: 6px 4px 4px #000;
-  max-height: 180px;
-}
-
-/* line 80, ../scss/universe.scss */
+/* line 40, ../scss/universe.scss */
 .button {
   display: inline-block;
   padding: 0.5em 2em 0.55em;
@@ -122,29 +83,75 @@ footer .inner:hover .controls {
   color: #c6c6c6;
 }
 
-/* line 86, ../scss/universe.scss */
-label {
-  min-width: 60px;
-}
-
-/* line 90, ../scss/universe.scss */
-.settings-toggle {
-  margin: 4px 14px;
-}
-
-/* line 94, ../scss/universe.scss */
-h1 {
-  font-size: 32px;
-  padding: 0;
-  margin: 0;
-  color: #FFF;
-  display: inline-block;
-  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.6);
-}
-
-/* line 103, ../scss/universe.scss */
+/* line 46, ../scss/universe.scss */
 #universe {
   width: 100%;
   height: 100%;
   background-color: #FFF;
+}
+
+/* line 52, ../scss/universe.scss */
+.settings-toggle {
+  margin: 4px 14px;
+}
+
+/* line 56, ../scss/universe.scss */
+footer {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+}
+/* line 62, ../scss/universe.scss */
+footer .inner {
+  display: inline-block;
+  margin-bottom: 2px;
+}
+/* line 68, ../scss/universe.scss */
+footer .inner .cogwheel {
+  display: inline-block;
+}
+/* line 72, ../scss/universe.scss */
+footer .inner .controls {
+  max-height: 0px;
+  padding: 0 12px;
+  overflow: hidden;
+  -moz-transition-property: all;
+  -o-transition-property: all;
+  -webkit-transition-property: all;
+  transition-property: all;
+  -moz-transition-duration: 1s;
+  -o-transition-duration: 1s;
+  -webkit-transition-duration: 1s;
+  transition-duration: 1s;
+  -moz-transition-delay: 1s;
+  -o-transition-delay: 1s;
+  -webkit-transition-delay: 1s;
+  transition-delay: 1s;
+  margin-top: 0px;
+  background-color: #262626;
+  -webkit-box-shadow: 0px 4px 4px #000;
+  -moz-box-shadow: 0px 4px 4px #000;
+  box-shadow: 0px 4px 4px #000;
+}
+/* line 83, ../scss/universe.scss */
+footer .inner .controls > div {
+  margin: 10px 0;
+  padding: 2px 0 10px;
+}
+/* line 90, ../scss/universe.scss */
+footer .inner:hover .controls {
+  -moz-transition-delay: 0s;
+  -o-transition-delay: 0s;
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
+  -webkit-box-shadow: 6px 4px 4px #000;
+  -moz-box-shadow: 6px 4px 4px #000;
+  box-shadow: 6px 4px 4px #000;
+  max-height: 180px;
+}
+
+/* line 99, ../scss/universe.scss */
+#lifetime,
+#celsize {
+  width: 180px;
 }
